--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -64,3 +64,24 @@ target_link_libraries(test_tickers PRIVATE
         common
         simple_polygon_io
 )
+
+add_executable(test_http test_http.cpp)
+target_include_directories(test_http
+        PRIVATE
+        ${SIMPLE_POLYGON_IO_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+        ${SIMPLE_CONFIG_INCLUDE}
+        ${SIMPLE_LOGGER_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${COMMON_INCLUDE}
+        ${CURL_INCLUDE}
+)
+
+target_link_libraries(test_http PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_http PRIVATE
+        simple_logger
+        simple_config
+        common
+        simple_polygon_io
+        libcurl_shared
+)
