--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,15 @@ set(SIMPLE_POLYGON_IO_SOURCE_FILES
         include/simple_polygon_io/exceptions.h
         include/simple_polygon_io/tickers.h
         include/simple_polygon_io/http.h
+        include/simple_polygon_io/ohlc.h
+        include/simple_polygon_io/macd.h
         src/config.cpp
         src/client.cpp
         src/exceptions.cpp
         src/tickers.cpp
         src/http.cpp
+        src/ohlc.cpp
+        src/macd.cpp
 )
 
 add_library(simple_polygon_io STATIC ${SIMPLE_POLYGON_IO_SOURCE_FILES})
