--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 
 set(SIMPLE_POLYGON_IO_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(SIMPLE_POLYGON_IO_SOURCE_FILES
+        include/simple_polygon_io/common.h
         include/simple_polygon_io/client.h
         include/simple_polygon_io/config.h
         include/simple_polygon_io/exceptions.h
