--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,8 +6,8 @@ if (CMAKE_DEBUG)
     message(STATUS "simple_polygon_io/tests COMMON_INCLUDE: ${COMMON_INCLUDE}")
 endif ()
 
-add_executable(test_client test_client.cpp)
-target_include_directories(test_client
+add_executable(test_simple_polygon_io_common test_common.cpp)
+target_include_directories(test_simple_polygon_io_common
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -17,9 +17,27 @@ target_include_directories(test_client
         ${COMMON_INCLUDE}
         ${POLYGON_IOCPP_HEADER}
 )
+target_link_libraries(test_simple_polygon_io_common PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_common PRIVATE
+        simple_logger
+        simple_config
+        common
+        simple_polygon_io
+)
 
-target_link_libraries(test_client PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_client PRIVATE
+add_executable(test_simple_polygon_io_client test_client.cpp)
+target_include_directories(test_simple_polygon_io_client
+        PRIVATE
+        ${SIMPLE_POLYGON_IO_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+        ${SIMPLE_CONFIG_INCLUDE}
+        ${SIMPLE_LOGGER_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${COMMON_INCLUDE}
+        ${POLYGON_IOCPP_HEADER}
+)
+target_link_libraries(test_simple_polygon_io_client PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_client PRIVATE
         simple_logger
         simple_config
         common
@@ -27,8 +45,8 @@ target_link_libraries(test_client PRIVATE
 )
 
 
-add_executable(test_config test_config.cpp)
-target_include_directories(test_config
+add_executable(test_simple_polygon_io_config test_config.cpp)
+target_include_directories(test_simple_polygon_io_config
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -38,16 +56,16 @@ target_include_directories(test_config
         ${COMMON_INCLUDE}
 )
 
-target_link_libraries(test_config PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_config PRIVATE
+target_link_libraries(test_simple_polygon_io_config PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_config PRIVATE
         simple_logger
         simple_config
         common
         simple_polygon_io
 )
 
-add_executable(test_tickers test_tickers.cpp)
-target_include_directories(test_tickers
+add_executable(test_simple_polygon_io_tickers test_tickers.cpp)
+target_include_directories(test_simple_polygon_io_tickers
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -57,16 +75,16 @@ target_include_directories(test_tickers
         ${COMMON_INCLUDE}
 )
 
-target_link_libraries(test_tickers PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_tickers PRIVATE
+target_link_libraries(test_simple_polygon_io_tickers PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_tickers PRIVATE
         simple_logger
         simple_config
         common
         simple_polygon_io
 )
 
-add_executable(test_http test_http.cpp)
-target_include_directories(test_http
+add_executable(test_simple_polygon_io_http test_http.cpp)
+target_include_directories(test_simple_polygon_io_http
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -77,8 +95,8 @@ target_include_directories(test_http
         ${CURL_INCLUDE}
 )
 
-target_link_libraries(test_http PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_http PRIVATE
+target_link_libraries(test_simple_polygon_io_http PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_http PRIVATE
         simple_logger
         simple_config
         common
@@ -86,8 +104,8 @@ target_link_libraries(test_http PRIVATE
         libcurl_static
 )
 
-add_executable(test_exceptions test_exceptions.cpp)
-target_include_directories(test_exceptions
+add_executable(test_simple_polygon_io_exceptions test_exceptions.cpp)
+target_include_directories(test_simple_polygon_io_exceptions
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -98,8 +116,8 @@ target_include_directories(test_exceptions
         ${CURL_INCLUDE}
 )
 
-target_link_libraries(test_exceptions PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_exceptions PRIVATE
+target_link_libraries(test_simple_polygon_io_exceptions PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_exceptions PRIVATE
         simple_logger
         simple_config
         common
@@ -108,8 +126,8 @@ target_link_libraries(test_exceptions PRIVATE
 )
 
 
-add_executable(test_ohlc test_ohlc.cpp)
-target_include_directories(test_ohlc
+add_executable(test_simple_polygon_io_ohlc test_ohlc.cpp)
+target_include_directories(test_simple_polygon_io_ohlc
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -119,8 +137,8 @@ target_include_directories(test_ohlc
         ${COMMON_INCLUDE}
 )
 
-target_link_libraries(test_ohlc PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_ohlc PRIVATE
+target_link_libraries(test_simple_polygon_io_ohlc PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_ohlc PRIVATE
         simple_logger
         simple_config
         common
@@ -128,8 +146,8 @@ target_link_libraries(test_ohlc PRIVATE
 )
 
 
-add_executable(test_macd test_macd.cpp)
-target_include_directories(test_macd
+add_executable(test_simple_polygon_io_macd test_macd.cpp)
+target_include_directories(test_simple_polygon_io_macd
         PRIVATE
         ${SIMPLE_POLYGON_IO_INCLUDE}
         ${SIMPLE_COLOR_INCLUDE}
@@ -138,9 +156,44 @@ target_include_directories(test_macd
         ${NLOHMANN_JSON_INCLUDE}
         ${COMMON_INCLUDE}
 )
+target_link_libraries(test_simple_polygon_io_macd PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_macd PRIVATE
+        simple_logger
+        simple_config
+        common
+        simple_polygon_io
+)
 
-target_link_libraries(test_macd PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_macd PRIVATE
+add_executable(test_simple_polygon_io_sma test_sma.cpp)
+target_include_directories(test_simple_polygon_io_sma
+        PRIVATE
+        ${SIMPLE_POLYGON_IO_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+        ${SIMPLE_CONFIG_INCLUDE}
+        ${SIMPLE_LOGGER_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${COMMON_INCLUDE}
+)
+target_link_libraries(test_simple_polygon_io_sma PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_sma PRIVATE
+        simple_logger
+        simple_config
+        common
+        simple_polygon_io
+)
+
+add_executable(test_simple_polygon_io_ema test_ema.cpp)
+target_include_directories(test_simple_polygon_io_ema
+        PRIVATE
+        ${SIMPLE_POLYGON_IO_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+        ${SIMPLE_CONFIG_INCLUDE}
+        ${SIMPLE_LOGGER_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${COMMON_INCLUDE}
+)
+target_link_libraries(test_simple_polygon_io_ema PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_simple_polygon_io_ema PRIVATE
         simple_logger
         simple_config
         common
