--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -199,3 +199,23 @@ target_link_libraries(test_simple_polygon_io_ema PRIVATE
         common
         simple_polygon_io
 )
+
+add_executable(test_instruction_execution test_instruction_execution.cpp)
+target_include_directories(test_instruction_execution
+        PRIVATE
+        ${SIMPLE_POLYGON_IO_INCLUDE}
+        ${SIMPLE_COLOR_INCLUDE}
+        ${SIMPLE_CONFIG_INCLUDE}
+        ${SIMPLE_LOGGER_INCLUDE}
+        ${NLOHMANN_JSON_INCLUDE}
+        ${COMMON_INCLUDE}
+        ${TRADING_COMMON_INCLUDE}
+)
+target_link_libraries(test_instruction_execution PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_instruction_execution PRIVATE
+        simple_logger
+        simple_config
+        common
+        simple_polygon_io
+        trading_common
+)
