--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SIMPLE_POLYGON_IO_SOURCE_FILES
         include/simple_polygon_io/sma.h
         include/simple_polygon_io/ema.h
         include/simple_polygon_io/instruction_executrion.h
+        include/simple_polygon_io/aggregates.h
         src/common.cpp
         src/config.cpp
         src/client.cpp
@@ -37,6 +38,7 @@ set(SIMPLE_POLYGON_IO_SOURCE_FILES
         src/sma.cpp
         src/ema.cpp
         src/instruction_executrion.cpp
+        src/aggregates.cpp
 )
 
 add_library(simple_polygon_io STATIC ${SIMPLE_POLYGON_IO_SOURCE_FILES})
